deploy/dynamo/helm/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: dynamo-store
  namespace: dynamo-cloud
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-internal: "false"
    service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
  selector:
    app: dynamo-api-store
